- switch to Java11 - switch to primefaces 8.0, fix errors